package com.grupo4.trabajo;

public class Pedido {
    private boolean limpiezaSimple;
    private boolean ordenamiento;
    private String superficie;
}
