@startuml
'https://plantuml.com/class-diagram

class Cliente{
-direccion: String
-deuda: float
-tiposervicio: Servicio


+pedirPedido(pedido: Pedido)
+setters()
+getters()
}

abstract class Servicio{
- cantLimpiezas: int
- cantOrdenamientos: int
- limiteDeuda: float
 -cuota: float

+validarPedido(pedido: Pedido,deuda: float)
+asignarRobots(Collection<Robot> robots)
-actualizarServicio(pedido: Pedido)
+setters()
+getters()
}

class Robot{
- pedidosPendientes: int
- idRobot: String
- superficie: String
- puedeOrdenar: boolean
- puedeLustrar: boolean
- costo: float

+agregarPedido()
+finalizarPedido()
}

Servicio <|-- Platinium
Servicio <|-- Classic
Servicio <|-- Economic

Robot <-- Servicio : Uso
Pedido <--  Cliente : Uso

class Platinium{
limiteDeuda = cuota
cantLimpiezas = INFINITE
cantOrdenamientos = INFINITE
}
class Classic{
limiteDeuda = 2000
cantOrdenamientos = 3
cantLimpiezas = INFINITE
}

class Economic{
limiteDeuda = 0
cantLimpiezas = 3
cantOrdenamientos = 0
}


Cliente *--  Servicio : composición

class Pedido{
- limpiezaSimple: boolean
- ordenamiento: boolean
- superficie: String
}

note left of Economic : definimos los limites de cada tipo de servicio\n para mas legibilidad
note left of Cliente : las funciones "setters" y "getters" \n hacen referencia a los get y set de cada variable de la clase\n se hara referencia a esto en cada clase con atributos

@enduml